# CRDT_fs

./: .gitignore  LICENSE  README.md  environment.yml  flake.nix  main.py  networked_volume_test.csv  pyproject.toml  requirements.txt
src/: main.py
src/evaluation/: __init__.py  benchmark.py  network_sim.py  partition_test.py  run_evaluation.py
src/filesystem/: __init__.py  data_store.py  fs_operations.py  fs_tree.py  fuse_binding.py  fuse_interface.py  inode_store.py  metadata_store.py
src/merkle_crdt/: .#__init__.py  __init__.py  merkle_crdt.py  merkle_fugue.py  merkle_ktree.py  merkle_lww.py  merkle_node.py  merkle_rga.py  merkle_tree.py
src/networking/: __init__.py  api_server.py  network_manager.py  peer.py  sync_protocol.py
tests/: README.txt  evaluation.py  gen_graph.py
